--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "cauldronSwapTest",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "scripts": {},
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
