--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cashscript": "^0.10.2"
+    "cashscript": "^0.11.0-next.1"
   },
   "devDependencies": {
-    "vitest": "^2.1.4"
+    "vitest": "^3.0.7"
   }
 }
