--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cashscript": "^0.11.0-next.3"
+    "cashscript": "^0.11.0"
   },
   "devDependencies": {
-    "vitest": "^3.1.1"
+    "vitest": "3.1.1"
   }
 }
