--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "Cauldron Swap Test using the CashScript SDK",
   "dependencies": {
+    "@bitauth/libauth": "3.1.0-next.8",
     "cashscript": "^0.12.1"
   },
   "devDependencies": {
